@@ -4,10 +4,9 @@ import static java.util.Objects.isNull;
 import static java.util.Objects.nonNull;
 import static java.util.Objects.requireNonNull;
 
-import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.URL;
-import java.nio.file.Files;
 import java.util.Objects;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -18,6 +17,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
  */
 public final class Resources {
 
+    private static final ClassLoader CLASS_LOADER = Resources.class.getClassLoader();
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
 
     private Resources() {
@@ -32,17 +32,14 @@ public final class Resources {
     }
 
     public static byte[] loadBinary(final String fileName) {
-        final URL url = fileUrl(fileName);
-        if (isNull(url)) {
-            throw new IllegalArgumentException("file not found: " + fileName);
-        }
-
-        final File resourceFile = new File(url.getFile());// TODO getResourceAsStream() to load resources in github
-                                                          // actions even from other jar
-        try {
-            return Files.readAllBytes(resourceFile.toPath());
-        } catch (final IOException e) {
-            throw new IllegalArgumentException("file could not be read: " + fileName, e);
+        requireNonNull(fileName, "fileName must not be null");
+        try (InputStream resourceStream = CLASS_LOADER.getResourceAsStream(fileName)) {
+            if (isNull(resourceStream)) {
+                throw new IllegalArgumentException("file not found: " + fileName);
+            }
+            return resourceStream.readAllBytes();
+        } catch (IOException e) {
+            throw new IllegalArgumentException("resource could not be read: " + fileName, e);
         }
     }
 
@@ -63,6 +60,6 @@ public final class Resources {
 
     private static URL fileUrl(final String fileName) {
         Objects.requireNonNull(fileName, "fileName must not be null");
-        return Resources.class.getClassLoader().getResource(fileName);
+        return CLASS_LOADER.getResource(fileName);
     }
 }
